<resources>
    <string name="app_name">RespiriApp</string>
    <string name="title_today">Today</string>
    <string name="title_medication">Medication</string>
    <string name="title_log">Log</string>
    <string name="reliever_fragment">reliever fragment</string>
    <string name="preventer_fragment">preventer fragment</string>
    <string name="other_meds_fragment">other meds fragment</string>
    <string name="daily_progress">Daily progress</string>
    <string name="symptoms_and_triggers">Symptoms and triggers</string>
    <string name="did_any_of_the_following_symptoms_affect_you_yesterday">Did any of the following symptoms affect you yesterday?</string>
    <string name="i_had_no_symptoms_yesterday">I had no symptoms yesterday</string>
    <string name="add_triggers">+ Add triggers</string>
    <string name="add_reliever">Add reliever</string>
    <string name="log_event">Log event</string>
    <string name="which_event_do_you_want_to_log">Which event do you want to log:</string>
    <string name="wheeze_recording">Wheeze recording</string>
    <string name="medication">Medication</string>
    <string name="no_relievers">No relievers</string>
    <string name="you_have_no_relievers_saved_at_the_moment">You have no relievers saved at the moment.</string>
    <string name="you_have_no_preventers_saved_at_the_moment">You have no preventers saved at the moment.</string>
    <string name="add_preventers">Add preventers</string>
    <string name="no_preventers">No preventers</string>
    <string name="you_have_no_other_meds_saved_at_the_moment">You have no other meds saved at the moment.</string>
    <string name="add_other_meds">Add other meds</string>
    <string name="no_other_meds">No other meds</string>
    <string name="add">Add</string>
</resources>