<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_today">

    <fragment
        android:id="@+id/navigation_today"
        android:name="com.chua.respiriapp.ui.today.TodayFragment"
        android:label="@string/title_today"
        tools:layout="@layout/fragment_today" />

    <fragment
        android:id="@+id/navigation_medication"
        android:name="com.chua.respiriapp.ui.medication.MedicationFragment"
        android:label="@string/title_medication"
        tools:layout="@layout/fragment_medication" />

    <dialog
        android:id="@+id/navigation_log"
        android:name="com.chua.respiriapp.ui.log.LogFragment"
        android:label="@string/title_log"
        tools:layout="@layout/fragment_log" />
</navigation>